Fix doc examples: correct API usage and props
- structured-output.mdx: Remove invalid 'validate' prop, use onFinished for validation
- coverage-loop.mdx: Replace reactiveDb with db.db
- group-chat.mdx: Replace reactiveDb with db.db, add missing Ralph id/condition props
- kitchen-sink.mdx: Already had correct Ralph props
- mcp-database.mdx: Replace reactiveDb with db.db
- simple-ralph.mdx: Replace reactiveDb with db.db, add note about enhanced version
- subagent-workflow.mdx: Move maxIterations from SmithersProvider to Ralph, add Ralph wrapper, fix db.db usage

--- a/docs/concepts/ralph-wiggum-loop.mdx
+++ b/docs/concepts/ralph-wiggum-loop.mdx
@@ -650,12 +650,16 @@ function RetryWorkflow() {
 
   // Reactive state from SQLite
   const { data: attemptsRaw } = useQueryValue<number>(
-    "SELECT CAST(value AS INTEGER) FROM state WHERE key = 'attempts'"
+    db.db,
+    "SELECT CAST(value AS INTEGER) FROM state WHERE key = 'attempts'",
+    []
   );
   const attempts = attemptsRaw ?? 0;
 
   const { data: doneRaw } = useQueryValue<number>(
-    "SELECT CAST(value AS INTEGER) FROM state WHERE key = 'done'"
+    db.db,
+    "SELECT CAST(value AS INTEGER) FROM state WHERE key = 'done'",
+    []
   );
   const done = Boolean(doneRaw);
 
@@ -677,8 +681,11 @@ function RetryWorkflow() {
 }
 
 function AppInner() {
+  const { db } = useSmithers();
   const { data: doneRaw } = useQueryValue<number>(
-    "SELECT CAST(value AS INTEGER) FROM state WHERE key = 'done'"
+    db.db,
+    "SELECT CAST(value AS INTEGER) FROM state WHERE key = 'done'",
+    []
   );
   const done = Boolean(doneRaw);
 
