--- a/docs/examples/coverage-loop.mdx
+++ b/docs/examples/coverage-loop.mdx
@@ -45,9 +45,9 @@ const COVERAGE_PROMPT = `Improve test coverage:
 4. Atomic commits, 2-3 tests per iteration max`;
 
 function CoverageLoop({ targetCoverage = 98, maxIterations = 20 }) {
-  const { db, reactiveDb } = useSmithers();
+  const { db } = useSmithers();
   const { data: checkCountVal } = useQueryValue<number>(
-    reactiveDb, "SELECT json_extract(value, '$') as v FROM state WHERE key = 'coverage.checkCount'"
+    db.db, "SELECT json_extract(value, '$') as v FROM state WHERE key = 'coverage.checkCount'"
   );
   const checkCount = checkCountVal ?? 0;
 
