--- a/docs/examples/mcp-database.mdx
+++ b/docs/examples/mcp-database.mdx
@@ -87,9 +87,9 @@ bun data-analysis.tsx
 import { useSmithers, If, Claude, Sqlite, useQueryValue } from "smithers-orchestrator";
 
 function DataWorkflow() {
-  const { db, reactiveDb } = useSmithers();
+  const { db } = useSmithers();
   const { data: phase } = useQueryValue<string>(
-    reactiveDb, "SELECT value FROM state WHERE key = 'phase'"
+    db.db, "SELECT value FROM state WHERE key = 'phase'"
   );
 
   return (
