--- a/docs/components/amp.mdx
+++ b/docs/components/amp.mdx
@@ -13,6 +13,10 @@ description: Amp CLI agent wrapper
 
 Runs the Amp CLI as a Smithers agent with DB-backed reporting and retry logic.
 
+```tsx
+import { Amp } from "smithers-orchestrator"
+```
+
 ## Props
 
 | Prop | Type | Default | Description |
