--- a/docs/components/codex.mdx
+++ b/docs/components/codex.mdx
@@ -13,6 +13,10 @@ description: OpenAI Codex CLI agent wrapper
 
 Wraps OpenAI Codex CLI for code-focused AI agent tasks. Alternative to Claude with OpenAI's models.
 
+```tsx
+import { Codex } from "smithers-orchestrator"
+```
+
 ## Props
 
 | Prop | Type | Default | Description |
