--- a/docs/components/each.mdx
+++ b/docs/components/each.mdx
@@ -5,6 +5,12 @@ description: Iterate over arrays with type-safe rendering
 
 # Each
 
+Iterate over arrays with type-safe rendering.
+
+```tsx
+import { Each } from "smithers-orchestrator"
+```
+
 ```tsx
 const files = ["auth.ts", "api.ts", "db.ts"]
 
