--- a/docs/components/end.mdx
+++ b/docs/components/end.mdx
@@ -5,6 +5,12 @@ description: Explicitly terminate orchestration with structured summary
 
 # End
 
+Explicitly terminate orchestration with structured summary.
+
+```tsx
+import { End } from "smithers-orchestrator"
+```
+
 ```tsx
 <End
   summary={{
