--- a/docs/components/parallel.mdx
+++ b/docs/components/parallel.mdx
@@ -5,6 +5,10 @@ description: Execute children concurrently within a Phase
 
 # Parallel
 
+```tsx
+import { Parallel } from "smithers-orchestrator";
+```
+
 Execute children concurrently. Steps within a Phase normally run sequentially; wrap in Parallel to run simultaneously.
 
 ```tsx
