--- a/docs/components/ralph.mdx
+++ b/docs/components/ralph.mdx
@@ -5,6 +5,10 @@ description: Iterative loop component for Smithers workflows
 
 # Ralph
 
+```tsx
+import { Ralph } from "smithers-orchestrator";
+```
+
 Ralph provides iteration in Smithers workflows. It's an alias for [While](/components/while)—use either interchangeably.
 
 <Note>
