--- a/docs/components/subagent.mdx
+++ b/docs/components/subagent.mdx
@@ -6,6 +6,10 @@ description: Named execution boundaries for Claude grouping
 # Subagent
 
 ```tsx
+import { Subagent } from "smithers-orchestrator";
+```
+
+```tsx
 <Subagent name="researcher">
   <Claude>Research the topic thoroughly.</Claude>
 </Subagent>
