--- a/docs/components/while.mdx
+++ b/docs/components/while.mdx
@@ -5,6 +5,10 @@ description: Iterative loop component - provides iteration in Smithers workflows
 
 # While
 
+```tsx
+import { While } from "smithers-orchestrator";
+```
+
 While provides iteration in Smithers workflows. Use it (or its alias [Ralph](/components/ralph)) to loop until a condition is met.
 
 <Note>
