--- a/docs/components/if.mdx
+++ b/docs/components/if.mdx
@@ -6,6 +6,10 @@ description: Conditional rendering component
 # If
 
 ```tsx
+import { If } from "smithers-orchestrator";
+```
+
+```tsx
 <If condition={phase === "implement"}>
   <Phase name="Implementation">
     <Step name="implement">
@@ -26,9 +30,9 @@ description: Conditional rendering component
 
 ```tsx
 function WorkflowBody() {
-  const { db, reactiveDb } = useSmithers()
+  const { db } = useSmithers()
   const { data: phaseVal } = useQueryValue<string>(
-    reactiveDb, "SELECT value FROM state WHERE key = 'phase'"
+    db.db, "SELECT value FROM state WHERE key = 'phase'"
   )
   const phase = phaseVal ?? "research"
   const setPhase = (p: string) => db.state.set('phase', p)
