--- a/docs/examples/kitchen-sink.mdx
+++ b/docs/examples/kitchen-sink.mdx
@@ -82,7 +82,7 @@ async function main() {
 
   try {
     const root = createSmithersRoot();
-    await root.mount(KitchenSinkWorkflow);
+    await root.mount(<KitchenSinkWorkflow />);
     db.execution.complete(executionId, { summary: "Kitchen sink workflow completed" });
   } catch (err) {
     const error = err instanceof Error ? err : new Error(String(err));
