--- a/docs/examples/multi-phase-review.mdx
+++ b/docs/examples/multi-phase-review.mdx
@@ -35,9 +35,9 @@ async function main() {
   }
 
   function ReviewWorkflow() {
-    const { db, reactiveDb } = useSmithers();
+    const { db } = useSmithers();
     const { data: phase } = useQueryValue<string>(
-      reactiveDb, "SELECT value FROM state WHERE key = 'phase'"
+      db.db, "SELECT value FROM state WHERE key = 'phase'"
     );
     const currentPhase = phase ?? "implement";
 
@@ -106,7 +106,7 @@ async function main() {
 
   try {
     const root = createSmithersRoot();
-    await root.mount(App);
+    await root.mount(<App />);
     db.execution.complete(executionId, { summary: "Review workflow complete" });
   } catch (err) {
     const error = err instanceof Error ? err : new Error(String(err));
