--- a/docs/examples/structured-output.mdx
+++ b/docs/examples/structured-output.mdx
@@ -65,7 +65,7 @@ async function main() {
 
   try {
     const root = createSmithersRoot();
-    await root.mount(AnalysisWorkflow);
+    await root.mount(<AnalysisWorkflow />);
     db.execution.complete(executionId, { summary: "Analysis complete", output: analysisResult });
   } catch (err) {
     const error = err instanceof Error ? err : new Error(String(err));
