--- a/docs/examples/subagent-workflow.mdx
+++ b/docs/examples/subagent-workflow.mdx
@@ -112,7 +112,7 @@ async function main() {
 
   try {
     const root = createSmithersRoot();
-    await root.mount(App);
+    await root.mount(<App />);
     db.execution.complete(executionId, { summary: "Feature development complete" });
   } catch (err) {
     const error = err instanceof Error ? err : new Error(String(err));
