--- a/docs/guides/mcp-integration.mdx
+++ b/docs/guides/mcp-integration.mdx
@@ -53,12 +53,12 @@ description: Connect Claude to external tools via Model Context Protocol
 import { useSmithers, If, Claude, Sqlite, useQueryValue } from "smithers-orchestrator";
 
 function DataPipelineBody() {
-  const { db, reactiveDb } = useSmithers();
+  const { db } = useSmithers();
   const { data: phase } = useQueryValue<string>(
-    reactiveDb, "SELECT value FROM state WHERE key = 'phase'"
+    db.db, "SELECT value FROM state WHERE key = 'phase'"
   );
   const { data } = useQueryValue<string>(
-    reactiveDb, "SELECT value FROM state WHERE key = 'data'"
+    db.db, "SELECT value FROM state WHERE key = 'data'"
   );
 
   return (
